--- a/2_世系圖表/2.2_并立政權/晉/十六國/胡夏世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/胡夏世系圖表.md
@@ -16,6 +16,7 @@ export_on_save:
 - 劉衛辰反復於秦魏間，最終被北魏殺，幼子劉勃勃(赫連勃勃)逃亡
 - 赫連勃勃逃亡後秦，後秦通好北魏而叛，建立胡夏
 - 413年築統萬城，改姓赫連
+- 418年襲取長安，稱帝
 
 ```mermaid
 graph TB
