--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -32,6 +32,7 @@ export_on_save:
 - 食餅毒死：漢質帝、晉惠帝
 - 被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、唐肅宗
 - 醉死：劉曜、禿髪烏孤
+- 被子悶死：晉孝武帝、晉恭帝、嘉靖（未遂）
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民
 - 忠臣食盡：荀彧、劉穆之
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母
@@ -101,7 +102,7 @@ export_on_save:
 - 娘砲：李固、曹植、何晏、唐伯虎
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯女生、小野妹子
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
-- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆
+- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃
 - 屠伯：嚴延年、苟晞
 - 食人魔：程昱、張方、石邃、石虎、苻登、郭黁、謝混
 - 零食達人：王敦、王安石
@@ -150,9 +151,10 @@ export_on_save:
 - 自戀狂：何晏
 - 睚眥必報：劉毅
 - 端午出生：孟嘗君、王鎮惡
+- 兄弟守護失敗者：晉惠帝+劉如意、晉恭帝+晉安帝
 - 三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮
 - 兄弟三人同床：姜肱+姜仲海+姜季江、劉備+關羽+張飛
-- 刺客不忍殺：趙盾、崔琦、蔡邕、許儒、李勢妹、姚襄
+- 刺客不忍殺：趙盾、崔琦、蔡邕、許儒、李勢妹、姚襄、司馬楚之
 - 極限逃生：趙武、蘇武、杜根、第五種、李燮、趙岐、張儉
 - 虐徒事件：黃石公+張良、郭泰+魏昭
 - 易與耳：劇辛+龐煖、龍且+韓信、李廣+胡虜、夏侯淵+韓遂
