--- a/2_世系圖表/2.2_并立政權/晉/十六國/西涼世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/西涼世系圖表.md
@@ -11,8 +11,10 @@ export_on_save:
 
 ## 世系圖
 
-- 李暠因為白額駒讖言，從北涼分化出來建立西涼，不敵又被北涼滅
+- 李暠因為白額駒讖言，從北涼分化出來建立西涼
+- 李歆執意攻打北涼反被滅
 - 北魏滅北涼後，李寶建立後西涼割據20年，終降北魏
+- 湊數政權，能上榜主要因為是隴西李氏先祖，被唐朝追認
 
 ```mermaid
 graph TB
