--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -42,7 +42,7 @@ export_on_save:
 - 救父：緹縈、馮緄
 - 被後媽虐：祖己、薛苞、蔣詡、李曇、王祥
 - 愚孝：祖己、孫性、李班
-- 愚忠：弘演、王累、羅企生
+- 愚忠：弘演、王累、羅企生、張禕
 - 摳門：樊伷、曹洪、司馬騰、慕容評
 - 給君主獻孕婦：呂不韋、春申君
 - 龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡
@@ -96,7 +96,7 @@ export_on_save:
 - 唯恐天下不亂：漢趙劉靈
 - 愛打小報告：息夫躬、廉昭
 - 暴露狂：桑扈、上官安、劉伶、張滿
-- 飆車愛好者：劉賀
+- 飆車愛好者：劉賀、宇文化及
 - cosplay愛好者：濟東王劉彭離、漢靈帝
 - 女裝大佬：曹叡、何晏、王國寶
 - 娘砲：李固、曹植、何晏、唐伯虎
@@ -141,7 +141,7 @@ export_on_save:
 - 萬人迷：黃憲、溫嶠
 - 死忠老外：呼尤徽、段匹磾
 - 友方中的前朝忠良∶孝平王皇后、司馬孚
-- 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥、譙小苟、王苟生、姚驢
+- 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥、譙小苟、王苟生、姚驢、封魔奴
 - 女王范兒：郭女王、袁女皇
 - 不倒翁：叔孫通、陳平、胡廣、馮道、曹振鏞
 - 自築小屋：袁閎、申屠蟠
@@ -150,7 +150,7 @@ export_on_save:
 - 吸毒誤國：魏道武帝、姚興
 - 自戀狂：何晏
 - 睚眥必報：劉毅
-- 端午出生：孟嘗君、王鎮惡
+- 端午出生：孟嘗君、王鎮惡、宋徽宗
 - 兄弟守護失敗者：晉惠帝+劉如意、晉恭帝+晉安帝
 - 三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮
 - 兄弟三人同床：姜肱+姜仲海+姜季江、劉備+關羽+張飛
