--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -62,7 +62,7 @@ export_on_save:
 - 反戰為民：鞠彭
 - 嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範、徐道覆、後秦趙玄
-- 長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強
+- 長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強、羅結
 - 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后
 - 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人、尹太后
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉
@@ -99,7 +99,7 @@ export_on_save:
 - 飆車愛好者：劉賀、宇文化及
 - cosplay愛好者：濟東王劉彭離、漢靈帝
 - 女裝大佬：曹叡、何晏、王國寶
-- 娘砲：李固、曹植、何晏、唐伯虎
+- 娘砲：李固、曹植、何晏、崔浩、唐伯虎
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯女生、小野妹子
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
 - 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃
