更新至卷120節5

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -30,7 +30,7 @@ export_on_save:
 - 赴戰陣殉難：關靖、于詮、諸葛尚
 - 跳樓：揚雄、緑珠、姚佛念
 - 食餅毒死：漢質帝、晉惠帝
-- 被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、唐肅宗
+- 被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、顔延之、唐肅宗
 - 醉死：劉曜、禿髪烏孤
 - 被子悶死：晉孝武帝、晉恭帝、嘉靖（未遂）
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民
@@ -66,7 +66,7 @@ export_on_save:
 - 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后
 - 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人、尹太后
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉
-- 矬：周舉、張松、朱然、宋配
+- 矬：周舉、張松、朱然、宋配、何尚之、顔延之
 - 慫：韓馥、尉建
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香
 - 被污早年失德：陳平、直不疑、第五倫
@@ -98,6 +98,7 @@ export_on_save:
 - 暴露狂：桑扈、上官安、劉伶、張滿
 - 飆車愛好者：劉賀、宇文化及
 - cosplay愛好者：濟東王劉彭離、漢靈帝
+- 皇帝愛做小買賣：漢靈帝、劉義符、蕭寶卷
 - 女裝大佬：曹叡、何晏、王國寶
 - 娘砲：李固、曹植、何晏、崔浩、唐伯虎
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯女生、小野妹子
@@ -139,7 +140,7 @@ export_on_save:
 - 巨人：阮翁仲、巨毋霸
 - 魔術師：黎軒善眩人、海西幻人
 - 萬人迷：黃憲、溫嶠
-- 死忠老外：呼尤徽、段匹磾
+- 死忠老外：呼尤徽、段匹磾、楊盛
 - 友方中的前朝忠良∶孝平王皇后、司馬孚
 - 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥、譙小苟、王苟生、姚驢、封魔奴
 - 女王范兒：郭女王、袁女皇
