--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -38,7 +38,7 @@ export_on_save:
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父
 - 清醒子女：胡毋謙之、張韙
-- 坑爹：周亞夫子、公孫敬聲、蕭伋、甄尋、司馬文思
+- 坑爹：周亞夫子、公孫敬聲、蕭伋、甄尋、司馬文思、劉宋劉劭
 - 救父：緹縈、馮緄
 - 被後媽虐：祖己、薛苞、蔣詡、李曇、王祥
 - 愚孝：祖己、孫性、李班
@@ -46,7 +46,7 @@ export_on_save:
 - 摳門：樊伷、曹洪、司馬騰、慕容評
 - 給君主獻孕婦：呂不韋、春申君
 - 龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡
-- 口吃：韓非、周昌、司馬相如、揚雄、鄧艾、曹叡、馬鈞
+- 口吃：韓非、周昌、司馬相如、揚雄、鄧艾、曹叡、馬鈞、孔覬
 - 狐臭：楚懷王
 - 脫髮: 王莽、曹丕
 - 酒糟鼻: 王慧龍
@@ -81,7 +81,7 @@ export_on_save:
 - 屠夫家皇后：何皇后、謝玖
 - 力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥
 - 刻苦讀書：蘇秦(刺股)、朱買臣(負薪)、兒寬、路溫舒、東漢孫敬(懸樑)、匡衡(鑿壁偷光)、車胤(囊螢)、晉朝孫康(映雪)、李密(掛角)
-- 神童：項橐、甘羅、孔融、曹沖、周不疑
+- 神童：后稷、項橐、甘羅、孔融、曹沖、周不疑
 - 常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆
 - 反復搖擺：徐龕、王擢、十六國張平、李辯、韋華
 - 出使持節：蘇武、于什門、隗仁
@@ -116,7 +116,7 @@ export_on_save:
 - 黑皮: 李陵容
 - 高頻率犯罪：劉賀、劉立
 - 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇、袁真
-- 殺子：石碏、金日磾、漢成帝、王立、王莽
+- 殺子：石碏、金日磾、漢成帝、王立、王莽、袁齊媯
 - 殺兄入嫂：齊桓公、李世民
 - 狗屎運：王興、王盛、黃耇、吳平
 - 仁義之師：趙充國、漢光武帝、慕容恪
