完成卷120，部分人物錯誤修正，主頁優化，添加人物表腳本工具

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -14,7 +14,7 @@ export_on_save:
 - 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導
 - 妖術厭勝制敵：王莽、司馬倫、王凝之、桓溫
 - 愛兵如子：吳起、李廣、衛青、祭遵、段熲、皇甫嵩、陳安
-- 成功踏冰：劉秀、慕容皝、魏道武帝
+- 成功踏冰：劉秀、慕容皝、魏道武帝、魏太武帝
 - 酷刑倖存者：尉古真
 - 虐待士卒：霍去病、李廣利、張飛
 - 虐待動物：田單、楊琁
@@ -103,7 +103,7 @@ export_on_save:
 - 娘砲：李固、曹植、何晏、崔浩、唐伯虎
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯女生、小野妹子
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
-- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃
+- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌
 - 屠伯：嚴延年、苟晞
 - 食人魔：程昱、張方、石邃、石虎、苻登、郭黁、謝混
 - 零食達人：王敦、王安石
