文件整理，部分筆記內圖表摘出

--- a/1_數據表/1.3_各類通表/人物總表字段說明.md
+++ b/1_數據表/1.3_各類通表/人物總表字段說明.md
@@ -4,19 +4,19 @@
 - 60000以上或負索引號人物為書外人物
 
 字段名稱|字段類型|說明
---|--|--|--
-索引號|int|主鍵，唯一數值索引，每卷占200號
-慣用名|str|綜合慣用名，以WIKI百科查詢為基準，部分結合慣用稱呼有調整
-通鑑名|array|通鑒內出現的指示此人的所有名稱
-通鑑目錄|int|外鍵，通鑑內首次出現的目錄編號
-出處|int|空-常規正文，此時代人物；1-臣光曰或其它評論；2-常規正文，提及之後時代人物；3-常規正文，提及之前時代人物；9-書外記錄關聯或聯想人物
+--|--|--
+索引號|int|唯一數值索引，不重複，每卷占200號，表外也會經常引用
+慣用名|str|綜合慣用名，不重複，以WIKI百科查詢為基準，部分結合慣用稱呼有調整，表外非數值索引也有應用
+通鑑名|str array|通鑑內出現的指示此人的所有名稱
+通鑑目錄|int|通鑑內首次出現的目錄編號，即章節表的索引號
+出處|int|空-常規正文，此時代人物；1-臣光曰或其它評論；2-常規正文，提及之後時代人物；3-常規正文，提及之前時代人物；9-非人類、書外記錄補遺等
 女性|bool|空-男；1-女；0-太監
-別稱|array|常見的別稱，通鑑名已有者不列。可能有多個，下同
+別稱|array|常見的別稱，通鑑名已有者不列。小名或外文原名均記録在此。可能有多個，下同
 姓|array|約西漢中期姓氏統一，只用姓
 名|array|
 字|array|
 號|array|
-氏|array|約西漢中期姓氏統一，不再用氏
+氏|array|約西漢中期姓氏統一，不再用氏，但部分少數民族仍使用
 謚|array|
 生年|int|出生年。以負號表示公元前，未知為0，下同
 卒年|int|死亡年
@@ -28,11 +28,11 @@
 從屬政權|array|可能從屬多個政權
 籍貫|str|人物原籍
 作品|array|各類文學藝術科技作品
-相關成語|array|因人物形成的成語
+相關典故|array|因人物形成的成語或典故
 人物組合|array|與他人并稱的稱號
-生僻度|int|空-維基百科有此詞條；1-維基百科無，百度有此詞條；2-維基、百度均無此詞條，散見其餘字典；3-網絡搜索中基本無此人相關檔案；4-歷史上從未記載過真名，以代稱或另一人關係名出現；5-歷史上從未記載過真名，但其余文獻有詳述，或有一定知名度；6-外文維基百科有此人
-簡述|str|簡要描述此人事跡
-記載年|array|若無生卒得失年，可記錄歷史記載的活躍年份，取可查最早出現的年份
-記載年備註|str|僅用於記載年的相關說明。如有記載年而此處無備注，表示來自通鑑內記載
+生僻度|int|空-維基百科有此詞條；1-維基百科無，百度有此詞條；2-維基、百度均無此詞條，散見其餘字典；3-網絡搜索中基本無此人相關檔案；4-本人查無資料，但與其有重要關係者非常有名；5-本人查無資料，但其余文獻有詳述，或有一定知名度；6-外文維基百科有此人
+簡述|str|簡要描述此人事跡，以通鑑記録為主，部分較確鑿或有意思的信息酌情加入
+記載年|array|若無生卒得失年，則在此記錄活躍年份，取通鑑中最早出現的年份
+記載年備註|str|如通鑑毫無記載年綫索，則在此處記録其他地方獲取的記載年推斷。最終也可能完全沒有確切的活躍年
 wiki異名|str|如有，則wiki名為此，否則與慣用名同
 備注|str|問題考據、生僻字讀音、生卒年范圍等
