--- a/2_世系圖表/2.1_帝王/戰國秦/周朝世系圖.md
+++ b/2_世系圖表/2.1_帝王/戰國秦/周朝世系圖.md
@@ -196,3 +196,26 @@ subgraph 東周
 end
 
 ```
+
+## 僅戰國部分關係圖
+
+```mermaid
+graph TB
+
+%% subgraph 史記戰國起點
+    周敬王-->周元王
+    周元王-->周貞定王
+    周貞定王-->周哀王
+    周貞定王-->周思王
+    周貞定王-->周考王
+    周考王-->周威烈王
+
+    subgraph 通鑑起點
+        周威烈王-->周安王
+        周安王-->周烈王
+        周安王-->周顯王
+        周顯王-->周慎靚王
+        周慎靚王-->周赧王
+    end
+%% end
+```
