--- a/2_世系圖表/2.1_帝王/戰國秦/秦國世系圖.md
+++ b/2_世系圖表/2.1_帝王/戰國秦/秦國世系圖.md
@@ -141,3 +141,30 @@ subgraph 秦朝
 end
 
 ```
+
+## 秦四代亂政世系圖
+
+```mermaid
+graph TB
+秦厉共公-->秦躁公
+秦厉共公-->秦怀公
+秦怀公-->秦昭子
+秦怀公-->秦简公
+秦简公-->秦惠公
+秦惠公-->秦出公
+秦昭子-->秦灵公
+秦灵公-->秦献公
+```
+
+## 秦四代亂政傳位圖
+
+```mermaid
+graph TB
+秦厉共公-->秦躁公
+秦躁公-->秦怀公
+秦怀公-->秦灵公
+秦灵公-->秦简公
+秦简公-->秦惠公
+秦惠公-->秦出公
+秦出公-->秦献公
+```
