--- a/2_世系圖表/2.1_帝王/戰國秦/趙國世系圖.md
+++ b/2_世系圖表/2.1_帝王/戰國秦/趙國世系圖.md
@@ -91,3 +91,27 @@ subgraph 東周
 end
 
 ```
+
+## 趙建國前世系圖
+
+```mermaid
+graph TB
+趙鞅-->趙伯魯
+趙鞅-->趙無恤
+趙伯魯-->代成君
+趙伯魯-->趙獻子
+趙無恤-->趙桓子
+趙獻子-->趙籍
+```
+
+## 赵建國前傳位圖
+
+```mermaid
+graph TB
+趙鞅--傳庶-->趙無恤
+趙無恤--還位-->代成君
+代成君--早夭-->趙獻子
+趙獻子--被逐-->趙桓子
+趙桓子--一年卒 國人迎立-->趙獻子
+趙獻子-->趙籍
+```
