--- a/5_筆記/资治通鉴1.md
+++ b/5_筆記/资治通鉴1.md
@@ -1,3 +1,8 @@
+---
+export_on_save:
+  html: true
+---
+
 > 2020/7/7->2020/7/30
 
 # 101 卷一 周纪一
@@ -59,8 +64,8 @@ graph TB
 
 ```mermaid
 graph TB
-魏桓子-->魏襄子
-魏襄子-->魏斯
+魏襄子-->魏桓子
+魏桓子-->魏斯
 ```
 
 - 韓建國前传位图
