部分字統一

--- a/1_數據表/1.3_各類通表/人物總表字段說明.md
+++ b/1_數據表/1.3_各類通表/人物總表字段說明.md
@@ -36,3 +36,11 @@
 記載年備註|str|如通鑑毫無記載年綫索，則在此處記録其他地方獲取的記載年推斷。最終也可能完全沒有確切的活躍年
 wiki異名|str|如有，則wiki名為此，否則與慣用名同
 備注|str|問題考據、生僻字讀音、生卒年范圍等
+
+## 部分統一用字
+
+- 主要為了方便查詢，人物總表之外不刻意替換
+
+棄用字|使用字|備註
+--|--|--
+髪|髮|
