部分筆記摘出

--- a/2_世系圖表/2.1_帝王/戰國秦/秦國世系圖.md
+++ b/2_世系圖表/2.1_帝王/戰國秦/秦國世系圖.md
@@ -168,3 +168,25 @@ graph TB
 秦惠公-->秦出公
 秦出公-->秦献公
 ```
+
+## 秦始皇關系圖
+
+```mermaid
+graph TB
+
+秦昭襄王--生父-->悼太子
+秦昭襄王--生父-->秦孝文王
+唐太后--生母-->秦孝文王
+秦孝文王--生父-->秦庄襄王
+秦孝文王--生父-->子傒
+夏姬--生母-->秦庄襄王
+华阳太后--立嫡-->秦庄襄王
+秦庄襄王--理论生父-->秦始皇
+赵姬--生母-->秦始皇
+吕不韦--疑似生父-->秦始皇
+
+classDef male fill:#AEBDFA,stroke-width:2px
+classDef female fill:#FAB7AE,stroke-dasharray:5,5
+class 秦昭襄王,秦孝文王,秦庄襄王,秦始皇 male
+class 唐太后,夏姬,华阳太后,赵姬 female
+```
