--- a/2_世系圖表/2.1_帝王/戰國秦/周朝世系圖.md
+++ b/2_世系圖表/2.1_帝王/戰國秦/周朝世系圖.md
@@ -219,3 +219,23 @@ graph TB
     end
 %% end
 ```
+
+## 西周國與東周國
+- 西周国：周考王元年始封
+
+君主|得位年|失位年
+--|--|--
+西周桓公|-440|-415
+西周威公|-414|-367
+西周惠公|-366|0
+西周武公|0|0
+西周文公|0|-256
+
+- 东周国：由西周国分裂而出
+
+君主|得位年|失位年
+--|--|--
+东周惠公|-367|-360
+东周武公|0|0
+东周昭文君|0|0
+东周君|0|-249
