西漢筆記圖表摘出

--- a/2_世系圖表/2.2_并立政權/漢/匈奴世系圖.md
+++ b/2_世系圖表/2.2_并立政權/漢/匈奴世系圖.md
@@ -45,6 +45,7 @@ class 伊雉斜右谷蠡王,且鞮侯左大將 nearchanyu
 ```
 
 ## 五單于爭立
+- 另見：[五單于爭立](3_專項研究/3.1_時代/西漢/五單于爭立.html) 
 
 ```mermaid
 graph TB
@@ -135,4 +136,35 @@ graph TB
 
 classDef chanyu fill:#ffee00
 class 醢落尸逐鞮單于1,丘浮尤鞮單于2,伊伐於慮鞮單于3,醢童尸逐侯鞮單于4,丘除車林鞮單于5,湖斜尸逐侯鞮單于6,伊屠於閭鞮單于7,休蘭尸逐侯鞮單于8,安國9,亭獨尸逐侯鞮單于10,萬氏尸逐侯鞮單于11,烏稽侯尸逐鞮單于12,去特若尸逐就單于13 chanyu
+```
+
+## 呼韓邪世系
+
+```mermaid
+graph TB
+呼韓邪單于-->伊屠智牙師
+呼韓邪單于-->復株累單于
+呼韓邪單于-->搜諧單于
+呼韓邪單于-->車牙單于
+呼韓邪單于-->烏珠留單于
+呼韓邪單于-->烏累單于
+呼韓邪單于-->樂
+
+復株累單于-->須卜居次
+復株累單于-->當于居次
+
+呼衍王-->顓渠閼氏
+呼衍王-->大閼氏
+顓渠閼氏-->車牙單于
+顓渠閼氏-->烏珠留單于
+大閼氏-->復株累單于
+大閼氏-->搜諧單于
+大閼氏-->烏累單于
+大閼氏-->樂
+王昭君-->伊屠智牙師
+王昭君-->須卜居次
+王昭君-->當于居次
+
+classDef female fill:#ffcccc
+class 顓渠閼氏,大閼氏,王昭君,須卜居次,當于居次 female
 ```
