--- a/3_專項研究/3.2_通用/秦漢三公九卿概要.md
+++ b/3_專項研究/3.2_通用/秦漢三公九卿概要.md
@@ -19,3 +19,11 @@ export_on_save:
 九卿|宗正|掌管皇族宗室事务|平帝：宗伯|中组部部长|司空所部
 九卿|治粟内史|掌管租税钱谷和财政收支，政府经济|景帝：大农令，武帝：大司农|中财办主任，财政部长|司空所部
 九卿|少府|掌管官府税收和手工业，皇室经济||国资委主任，税务部长|司空所部
+
+# 漢哀帝時期新三公分職
+
+名稱|原名|職責
+--|--|--
+大司馬|太尉|掌兵事
+大司徒|丞相|掌人民事
+大司空|御史大夫|掌水土事
