--- a/2_世系圖表/2.2_并立政權/漢/羌人.md
+++ b/2_世系圖表/2.2_并立政權/漢/羌人.md
@@ -43,3 +43,12 @@ export_on_save:
 5|迷唐|劉尚、趙世|擊迷唐慘勝，坐畏懦免官
 6|迷唐|王信、耿譚、吳祉|招降迷唐復反，坐徵
 7|迷唐|周鮪、侯霸|擊破迷唐，逃至發羌，多年後病死
+
+## 先零羌遇刺表
+
+遇刺者|身份|刺客|委託人|備註
+--|--|--|--|--
+杜琦|聯羌叛亂領袖|杜習|漢陽太守趙博|
+杜季貢|聯羌叛亂領袖，投零昌為將軍|榆鬼|任尚|杜季貢為杜琦弟，零昌主將
+零昌|先零羌首領|號封|任尚|滇零子，年幼即位
+狼莫|先零羌謀主|雕何|鄧遵|
