--- a/3_專項研究/3.2_通用/漢樂.md
+++ b/3_專項研究/3.2_通用/漢樂.md
@@ -3,7 +3,9 @@ export_on_save:
     html: true
 ---
 
-# 六代之樂
+# 漢樂
+
+## 六代之樂
 
 朝代|樂舞名|別名|用途
 --|--|--|--
@@ -13,3 +15,12 @@ export_on_save:
 禹|大夏||文舞，祭祀山川
 湯|大護|大濩|武舞，祭祀姜嫄
 周|大武||武舞，祭祀周朝祖先
+
+## 蔡邕漢樂四品
+
+名稱|用途
+--|--
+太予樂|典郊廟上陵殿舉之樂
+周頌雅樂|典辟雍饗射六宗社稷之樂
+黃門鼓吹|天子所以宴樂群臣
+短簫鐃歌|軍樂
