--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -121,6 +121,7 @@ export_on_save:
 - 狗屎運：王興、王盛、黃耇、吳平
 - 仁義之師：趙充國、漢光武帝、慕容恪
 - 奇葩爵位：羹頡侯劉信、膫侯畢取、不義侯子密、思悔侯段璣、醜侯吳質
+- 活人得謚號：楚義帝、漢獻帝
 - 大預言家：辛憲英、申胤、黃泓、郭黁、崔浩
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
 - 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母、前秦毛皇后、謝道韞
@@ -177,4 +178,5 @@ export_on_save:
 - 欒巴：凈身不徹底的宦官，娶妻生子，名列八使
 - 三姓皇后：鄧猛女
 - 減肥困難：王戎子王綏`有美号而太肥，戎令食糠，而肥愈甚也。`
+- 斷指舟中可掬：邲之戰、李郭之亂
 - 孝感動天與祖己流放曾子挨打；哭竹生筍與子夏失明；扼虎救父與李逵背母；乳姑不怠與張蒼喝奶；親嘗湯藥盛世與李班因孝失國
