--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -8,8 +8,8 @@ export_on_save:
 - 拒絕晉升：申包胥、王蠋、孔霸、劉愷、田疇、蔡謨
 - 拒絕稱帝王：季札、公子閭、劉虞
 - 拒絶出仕：辛謐、戴逵
-- 拒絶禪讓堅決弒君：石虎、張天錫
-- 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎
+- 拒絶禪讓堅決弒君：石虎、張天錫、楊難當
+- 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎、馮跋
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導
 - 妖術厭勝制敵：王莽、司馬倫、王凝之、桓溫
@@ -31,6 +31,7 @@ export_on_save:
 - 跳樓：揚雄、緑珠、姚佛念
 - 食餅毒死：漢質帝、晉惠帝
 - 被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、顔延之、唐肅宗
+- 被人嚇死：馮跋
 - 醉死：劉曜、禿髪烏孤
 - 被子悶死：晉孝武帝、晉恭帝、嘉靖（未遂）
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民
