--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -7,7 +7,7 @@ export_on_save:
 
 - 拒絕晉升：申包胥、王蠋、孔霸、劉愷、田疇、蔡謨
 - 拒絕稱帝王：季札、公子閭、劉虞
-- 拒絶出仕：辛謐、戴逵
+- 拒絶出仕辭官：辛謐、戴逵、王弘
 - 拒絶禪讓堅決弒君：石虎、張天錫、楊難當
 - 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎、馮跋
 - 烹子食子：易牙、樂羊
@@ -61,6 +61,7 @@ export_on_save:
 - 感動中國好官：卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩、寇恂、張堪、廉范、劉寵、賈逵、諸葛亮、祖逖、姚襄
 - 舍身為民：魏咎、劉璋
 - 反戰為民：鞠彭
+- 空城計：叔詹、趙雲、曹操、文聘、蕭承之、王思政、祖珽、李元軌、德川家康
 - 嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範、徐道覆、後秦趙玄
 - 長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強、羅結、燕鳳
@@ -116,8 +117,8 @@ export_on_save:
 - 獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、房曠、殷仲堪、蕭繹、李克用、李自成
 - 黑皮: 李陵容
 - 高頻率犯罪：劉賀、劉立
-- 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇、袁真
-- 殺子：石碏、金日磾、漢成帝、王立、王莽、袁齊媯
+- 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇、袁真、姚聳夫
+- 殺子：石碏、金日磾、漢成帝、王立、王莽、袁齊媯、焦遺
 - 殺兄入嫂：齊桓公、李世民
 - 狗屎運：王興、王盛、黃耇、吳平
 - 仁義之師：趙充國、漢光武帝、慕容恪
