更新至卷122節3

--- a/2_世系圖表/2.2_并立政權/晉/十六國/胡夏世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/胡夏世系圖表.md
@@ -18,6 +18,7 @@ export_on_save:
 - 413年築統萬城，改姓赫連
 - 418年襲取長安，稱帝
 - 赫連勃勃死後，426年打殘西秦，統萬之戰又被北魏打殘
+- 胡夏武力尚可，但主打殘忍好殺，死前順手滅了西秦，最後被吐谷渾撿人頭
 
 ```mermaid
 graph TB
