--- a/2_世系圖表/2.2_并立政權/晉/十六國/西秦世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/西秦世系圖表.md
@@ -10,6 +10,8 @@ export_on_save:
 @import "西秦世系表.csv"
 
 ## 世系圖
+- 僅乞伏乾歸、乞伏熾磐稍有建樹
+- 乞伏熾磐後期與北涼互相攻伐，國力漸弱，可謂被打得滿地找牙，最後在投降北魏的路上被即將滅亡的胡夏攻滅，唯一的忠臣焦遺欲東山再起而病卒
 
 ```mermaid
 graph TB
