--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -9,7 +9,7 @@ export_on_save:
 - 拒絕稱帝王：季札、公子閭、劉虞
 - 拒絶出仕辭官：辛謐、戴逵、王弘
 - 拒絶禪讓堅決弒君：石虎、張天錫、楊難當
-- 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎、馮跋
+- 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎、馮跋、拓跋晃
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導
 - 妖術厭勝制敵：王莽、司馬倫、王凝之、桓溫
@@ -159,7 +159,7 @@ export_on_save:
 - 三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮
 - 兄弟三人同床：姜肱+姜仲海+姜季江、劉備+關羽+張飛
 - 刺客不忍殺：趙盾、崔琦、蔡邕、許儒、李勢妹、姚襄、司馬楚之
-- 極限逃生：趙武、蘇武、杜根、第五種、李燮、趙岐、張儉
+- 極限逃生：趙武、蘇武、杜根、第五種、李燮、趙岐、張儉、朱脩之
 - 虐徒事件：黃石公+張良、郭泰+魏昭
 - 易與耳：劇辛+龐煖、龍且+韓信、李廣+胡虜、夏侯淵+韓遂
 - 相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈、劉聰+劉乂、劉琨+段匹磾、苻堅+慕容沖
