完成卷122，世家大族整理

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -169,7 +169,7 @@ export_on_save:
 - 恥做乾兒子：秦始皇+嫪毐、張綉+曹操、張遇+苻健
 - 鞭屍戳屍：齊懿公+邴原、伍子胥+楚平王、蘇不韋+李阜、姚萇+苻堅、魏道武帝+慕容詳、桓玄+劉牢之
 - 被打鷄血：石遵+冉閔(努力！事成，以爾為儲貳)、朱棣+朱高煦(勉之！世子多疾)
-- 農夫與蛇：苻堅+姚萇、滕恬之+翟遼、沒奕干+赫連勃勃、禿髪傉檀+乞伏熾磐
+- 農夫與蛇：苻堅+姚萇、滕恬之+翟遼、沒奕干+赫連勃勃、禿髪傉檀+乞伏熾磐、殷景仁+劉湛
 
 # 雜說
 
