--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -113,12 +113,13 @@ export_on_save:
 - 盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英
 - 裝瘋大師：箕子、孫臏、蒯徹、韋玄成、賀循、慕容翰、慕容超、朱棣
 - 裝死大師：齊桓公、杜根
-- 裝病大師：司馬懿、衛瓘、王戎
+- 裝病大師：司馬懿、衛瓘、王戎、殷景仁
 - 裝醉大師：王允之
 - 獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、房曠、殷仲堪、蕭繹、李克用、李自成
 - 黑皮: 李陵容
 - 高頻率犯罪：劉賀、劉立
 - 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇、袁真、姚聳夫
+- 殺妻食軍：沮渠天周
 - 殺子：石碏、金日磾、漢成帝、王立、王莽、袁齊媯、焦遺
 - 殺兄入嫂：齊桓公、李世民
 - 狗屎運：王興、王盛、黃耇、吳平
