--- a/3_專項研究/3.2_通用/歷代反賊李弘列表.md
+++ b/3_專項研究/3.2_通用/歷代反賊李弘列表.md
@@ -4,7 +4,7 @@ export_on_save:
 ---
 
 # 歷代反賊李弘列表
-- 傳言為太上老君下凡的化名
+- 李弘真君傳言為太上老君下凡的化名
 
 姓名|標識名|反對政權|結局|事跡
 --|--|--|--|--
@@ -12,4 +12,5 @@ export_on_save:
 李弘|後趙李弘|後趙|342被誅|結黨反對石虎
 李弘|廣漢李弘|東晉|370被周虓討平|妖賊，自稱成漢末帝李勢子、聖王
 李弘|後秦李弘|後秦|414被姚興禽|妖賊，連氐人造反
+李洪|仇池李洪|仇池|446被梁會殺|仇池反賊被北魏反賊殺死
 李弘芝|李弘芝|隋朝|617年被唐弼殺|被唐弼推為天子
