--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -104,7 +104,7 @@ export_on_save:
 - 皇帝愛做小買賣：漢靈帝、劉義符、蕭寶卷
 - 女裝大佬：曹叡、何晏、王國寶
 - 娘砲：李固、曹植、何晏、崔浩、唐伯虎
-- 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯女生、小野妹子
+- 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯爽(女生)、小野妹子
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
 - 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌
 - 屠伯：嚴延年、苟晞
