更新至卷126節5

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -26,14 +26,14 @@ export_on_save:
 - 哭死哭瞎：子夏、張放、孝睦皇后、趙戩
 - 嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹、司馬攸
 - 疽發背死：范增、劉焉、曹休、庾悅
-- 自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之、後燕王榮
+- 自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之、後燕王榮、鄭羆之子
 - 赴戰陣殉難：關靖、于詮、諸葛尚
 - 跳樓：揚雄、緑珠、姚佛念
 - 食餅毒死：漢質帝、晉惠帝
 - 被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、顔延之、唐肅宗
 - 被人嚇死：馮跋
 - 醉死：劉曜、禿髪烏孤
-- 被子悶死：晉孝武帝、晉恭帝、嘉靖（未遂）
+- 被子悶死：晉孝武帝、晉恭帝、劉義康、嘉靖（未遂）
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民、北涼老父
 - 忠臣食盡：荀彧、劉穆之
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母
@@ -107,6 +107,7 @@ export_on_save:
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯爽(女生)、小野妹子
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
 - 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌
+- 帝王宗室殺手：趙高、靳準、宗愛
 - 屠伯：嚴延年、苟晞
 - 食人魔：程昱、張方、石邃、石虎、苻登、郭黁、謝混
 - 零食達人：王敦、王安石
