--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -20,7 +20,7 @@ export_on_save:
 - 虐待動物：田單、楊琁
 - 招貓遞狗君王：無彊、宋康王、齊湣王
 - 餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫、楊喬、得來、楊芷
-- 氣死：申屠嘉、王商、梁女瑩、朱穆、朱儁、陸遜、羊琇、向雄、晉元帝、王遜、桓沖
+- 氣死：申屠嘉、王商、梁女瑩、朱穆、朱儁、陸遜、羊琇、向雄、晉元帝、王遜、桓沖、袁齊媯
 - 吐哺：周公、郗鑒
 - 死於廁所：晉景公、韓馥、呂產
 - 哭死哭瞎：子夏、張放、孝睦皇后、趙戩
@@ -64,7 +64,7 @@ export_on_save:
 - 空城計：叔詹、趙雲、曹操、文聘、蕭承之、王思政、祖珽、李元軌、德川家康
 - 嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範、徐道覆、後秦趙玄
-- 長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強、羅結、燕鳳、羊玄保
+- 長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強、羅結、燕鳳、羊玄保、高允
 - 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后
 - 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人、尹太后
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉
@@ -163,10 +163,10 @@ export_on_save:
 - 三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮
 - 兄弟三人同床：姜肱+姜仲海+姜季江、劉備+關羽+張飛
 - 刺客不忍殺：趙盾、崔琦、蔡邕、許儒、李勢妹、姚襄、司馬楚之
-- 極限逃生：趙武、蘇武、杜根、第五種、李燮、趙岐、張儉、朱脩之
+- 生存大師極限逃生：趙武、蘇武、杜根、第五種、李燮、趙岐、張儉、朱脩之、師賢
 - 虐徒事件：黃石公+張良、郭泰+魏昭
 - 易與耳：劇辛+龐煖、龍且+韓信、李廣+胡虜、夏侯淵+韓遂
-- 相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈、劉聰+劉乂、劉琨+段匹磾、苻堅+慕容沖
+- 相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈、劉聰+劉乂、劉琨+段匹磾、苻堅+慕容沖、陳天與+王鸚鵡
 - 替身：劉邦+紀信、祖約+閻秃
 - 讓馬：曹洪+曹操、傅武-劉曜
 - 恥做乾兒子：秦始皇+嫪毐、張綉+曹操、張遇+苻健
