--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -12,7 +12,7 @@ export_on_save:
 - 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎、馮跋、拓跋晃
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導
-- 妖術厭勝制敵：王莽、司馬倫、王凝之、桓溫
+- 妖術厭勝制敵：王莽、司馬倫、王凝之、桓溫、劉宋劉劭
 - 愛兵如子：吳起、李廣、衛青、祭遵、段熲、皇甫嵩、陳安
 - 成功踏冰：劉秀、慕容皝、魏道武帝、魏太武帝
 - 酷刑倖存者：尉古真
@@ -39,7 +39,7 @@ export_on_save:
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父
 - 清醒子女：胡毋謙之、張韙
-- 坑爹：周亞夫子、公孫敬聲、蕭伋、甄尋、司馬文思、劉宋劉劭
+- 坑爹：楚穆王、周亞夫子、公孫敬聲、蕭伋、甄尋、司馬文思、劉宋劉劭
 - 救父：緹縈、馮緄
 - 被後媽虐：祖己、薛苞、蔣詡、李曇、王祥
 - 愚孝：祖己、孫性、李班
