目録結構整理，內置csvtotable

--- a/3_專項研究/3.2_通用/粗線條歷史朝代表.md
+++ b/3_專項研究/3.2_通用/粗線條歷史朝代表.md
@@ -20,3 +20,15 @@ export_on_save:
 |11|明|1300|1600|300|治||
 |12|清|1600|1900|300|治|前200年屬古代(治)，後100年屬近代(亂)|
 |13|民國|||50|亂||
+
+## 帝王速記
+- 秦：始皇胡亥
+- 西漢：高惠文景武 昭宣元成哀平
+- 東漢：光武 明章和安順 沖質桓靈獻
+- 曹魏：曹操 丕叡芳髦奐
+    - 蜀漢：劉備 劉禪
+    - 孫吳：孫堅 策權亮休皓
+- 西晉：武惠懷愍
+- 東晉：元明成康穆哀廢 簡文孝武安恭
+- 北魏：道武明元太武 景穆文成獻文 孝文宣武文景孝明
+- 劉宋：武文孝武明順
