--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -165,7 +165,7 @@ export_on_save:
 - 刺客不忍殺：趙盾、崔琦、蔡邕、許儒、李勢妹、姚襄、司馬楚之
 - 生存大師極限逃生：趙武、蘇武、杜根、第五種、李燮、趙岐、張儉、朱脩之、師賢
 - 虐徒事件：黃石公+張良、郭泰+魏昭
-- 易與耳：劇辛+龐煖、龍且+韓信、李廣+胡虜、夏侯淵+韓遂
+- 易與耳：劇辛+龐煖、龍且+韓信、李廣+胡虜、夏侯淵+韓遂、王玄謨+臧質
 - 相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈、劉聰+劉乂、劉琨+段匹磾、苻堅+慕容沖、陳天與+王鸚鵡
 - 替身：劉邦+紀信、祖約+閻秃
 - 讓馬：曹洪+曹操、傅武-劉曜
