--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -102,11 +102,13 @@ export_on_save:
 - 飆車愛好者：劉賀、宇文化及
 - cosplay愛好者：濟東王劉彭離、漢靈帝
 - 皇帝愛做小買賣：漢靈帝、劉義符、蕭寶卷
+- 止啼：張遼、劉胡
 - 女裝大佬：曹叡、何晏、王國寶
 - 娘砲：李固、曹植、何晏、崔浩、唐伯虎
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯爽(女生)、小野妹子
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
 - 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌
+- 娛樂至死：劉渾
 - 帝王宗室殺手：趙高、靳準、宗愛
 - 屠伯：嚴延年、苟晞
 - 食人魔：程昱、張方、石邃、石虎、苻登、郭黁、謝混
@@ -117,7 +119,7 @@ export_on_save:
 - 裝病大師：司馬懿、衛瓘、王戎、殷景仁
 - 裝醉大師：王允之
 - 獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、房曠、殷仲堪、蕭繹、李克用、李自成
-- 黑皮: 李陵容
+- 黑皮: 李陵容、劉胡
 - 高頻率犯罪：劉賀、劉立
 - 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇、袁真、姚聳夫
 - 殺妻食軍：沮渠天周
@@ -147,7 +149,7 @@ export_on_save:
 - 巨人：阮翁仲、巨毋霸
 - 魔術師：黎軒善眩人、海西幻人
 - 萬人迷：黃憲、溫嶠
-- 死忠老外：呼尤徽、段匹磾、楊盛
+- 死忠老外：金日磾、呼尤徽、段匹磾、楊盛、源賀
 - 友方中的前朝忠良∶孝平王皇后、司馬孚
 - 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥、譙小苟、王苟生、姚驢、封魔奴
 - 女王范兒：郭女王、袁女皇
