--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -43,7 +43,7 @@ export_on_save:
 - 救父：緹縈、馮緄
 - 被後媽虐：祖己、薛苞、蔣詡、李曇、王祥
 - 愚孝：祖己、孫性、李班
-- 愚忠：弘演、王累、羅企生、張禕
+- 愚忠：弘演、王累、羅企生、張禕、賀弼
 - 摳門：樊伷、曹洪、司馬騰、慕容評
 - 給君主獻孕婦：呂不韋、春申君
 - 龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡
@@ -107,7 +107,7 @@ export_on_save:
 - 娘砲：李固、曹植、何晏、崔浩、唐伯虎
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯爽(女生)、小野妹子
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
-- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌
+- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌、宗越
 - 娛樂至死：劉渾
 - 帝王宗室殺手：趙高、靳準、宗愛
 - 屠伯：嚴延年、苟晞
