--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -9,7 +9,7 @@ export_on_save:
 - 拒絕稱帝王：季札、公子閭、劉虞
 - 拒絶出仕辭官：辛謐、戴逵、王弘
 - 拒絶禪讓堅決弒君：石虎、張天錫、楊難當
-- 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎、馮跋、拓跋晃
+- 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎、馮跋、拓跋晃、宋孝武帝
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導
 - 妖術厭勝制敵：王莽、司馬倫、王凝之、桓溫、劉宋劉劭
@@ -43,6 +43,7 @@ export_on_save:
 - 坑爹：楚穆王、周亞夫子、公孫敬聲、蕭伋、甄尋、司馬文思、劉宋劉劭
 - 救父：緹縈、馮緄
 - 被後媽虐：祖己、薛苞、蔣詡、李曇、王祥
+- 無父無母：劉濬、劉子業
 - 愚孝：祖己、孫性、李班
 - 愚忠：弘演、王累、羅企生、張禕、賀弼
 - 摳門：樊伷、曹洪、司馬騰、慕容評
@@ -70,7 +71,7 @@ export_on_save:
 - 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人、尹太后
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉
 - 矬：周舉、張松、朱然、宋配、何尚之、顔延之、陸俟
-- 慫：韓馥、尉建、范曄
+- 慫：韓馥、尉建、范曄、劉義恭
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香
 - 被污早年失德：陳平、直不疑、第五倫
 - 名廚：伊尹、易牙、毛修之
