更新至卷130節3

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -52,7 +52,7 @@ export_on_save:
 - 口吃：韓非、周昌、司馬相如、揚雄、鄧艾、曹叡、馬鈞、孔覬
 - 狐臭：楚懷王
 - 脫髮: 王莽、曹丕
-- 酒糟鼻: 王慧龍
+- 酒糟鼻: 王慧龍、宋孝武帝
 - 消渴(糖尿病)：司馬相如
 - 羸瘵(肺結核)：賀循
 - 陽痿：膠西王劉端、司馬保
@@ -108,7 +108,7 @@ export_on_save:
 - 娘砲：李固、曹植、何晏、崔浩、唐伯虎
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯爽(女生)、小野妹子
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
-- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌、宗越
+- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌、宗越、劉子業
 - 娛樂至死：劉渾
 - 帝王宗室殺手：趙高、靳準、宗愛
 - 屠伯：嚴延年、苟晞
@@ -136,9 +136,11 @@ export_on_save:
 - 女智謀家：辛憲英、習英習
 - 女刺客：女艾、前秦楊皇后、張貴人
 - 誓不改嫁：夏侯令女、前秦楊皇后、呂纂楊皇后
-- 女權主義者：程咸
+- 女權主義者：程咸、劉楚玉
 - 被姦尸：呂后、漢桓帝馮貴人、苻訓英
 - 群姦亂國：夏姬、叱洛侯少妻
+- 被強姦男性：褚淵
+- 眼白大：褚淵
 - 白眉：劉曜
 - 紅眼：劉曜
 - 重瞳：項羽、呂光、沈約、魚俱羅、朱友孜、北漢劉崇、李煜、卓岩明、明玉珍、顧炎武
