--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -33,7 +33,7 @@ export_on_save:
 - 被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、顔延之、唐肅宗
 - 被人嚇死：馮跋
 - 醉死：劉曜、禿髪烏孤
-- 被子悶死：晉孝武帝、晉恭帝、劉義康、嘉靖（未遂）
+- 被子悶死：晉孝武帝、晉恭帝、劉義康、沈慶之、嘉靖（未遂）
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民、北涼老父
 - 忠臣食盡：荀彧、劉穆之
 - 不給皇帝開門：郅惲、謝莊
@@ -47,7 +47,7 @@ export_on_save:
 - 愚孝：祖己、孫性、李班
 - 愚忠：弘演、王累、羅企生、張禕、賀弼
 - 摳門：樊伷、曹洪、司馬騰、慕容評
-- 給君主獻孕婦：呂不韋、春申君
+- 給君主獻孕婦：呂不韋、春申君、劉曚
 - 龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡
 - 口吃：韓非、周昌、司馬相如、揚雄、鄧艾、曹叡、馬鈞、孔覬
 - 狐臭：楚懷王
