--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -55,7 +55,7 @@ export_on_save:
 - 酒糟鼻: 王慧龍、宋孝武帝
 - 消渴(糖尿病)：司馬相如
 - 羸瘵(肺結核)：賀循
-- 陽痿：膠西王劉端、司馬保
+- 陽痿：膠西王劉端、司馬保、宋明帝
 - 吮癰舐痔：鄧通、李班
 - 壁中藏書：孔鮒、伏生、陳寵曾祖陳咸
 - 壁中藏人：梁伯玉、趙歧、袁閎、伏皇后
