更新至卷132節3

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -189,5 +189,5 @@ export_on_save:
 - 欒巴：凈身不徹底的宦官，娶妻生子，名列八使
 - 三姓皇后：鄧猛女
 - 減肥困難：王戎子王綏`有美号而太肥，戎令食糠，而肥愈甚也。`
-- 斷指舟中可掬：邲之戰、李郭之亂
+- 斷指舟中可掬：邲之戰、李郭之亂、尉元薛安都破張永之戰
 - 孝感動天與祖己流放曾子挨打；哭竹生筍與子夏失明；扼虎救父與李逵背母；乳姑不怠與張蒼喝奶；親嘗湯藥盛世與李班因孝失國
