更新至卷132節6

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -86,7 +86,7 @@ export_on_save:
 - 刻苦讀書：蘇秦(刺股)、朱買臣(負薪)、兒寬、路溫舒、東漢孫敬(懸樑)、匡衡(鑿壁偷光)、車胤(囊螢)、晉朝孫康(映雪)、李密(掛角)
 - 神童：后稷、項橐、甘羅、孔融、曹沖、周不疑
 - 常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆
-- 反復搖擺：徐龕、王擢、十六國張平、李辯、韋華、薛安都
+- 反復搖擺：徐龕、王擢、十六國張平、李辯、韋華、薛安都、沈文秀
 - 出使持節：蘇武、于什門、隗仁
 - 猶豫不決：甘卓、劉牢之、宋文帝
 - 死前暴擊：項羽、段文鴦、冉閔
