--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -47,7 +47,7 @@ export_on_save:
 - 愚孝：祖己、孫性、李班
 - 愚忠：弘演、王累、羅企生、張禕、賀弼
 - 摳門：樊伷、曹洪、司馬騰、慕容評
-- 給君主獻孕婦：呂不韋、春申君、劉曚
+- 給君主獻孕婦：呂不韋、春申君、劉曚、李道兒
 - 龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡
 - 口吃：韓非、周昌、司馬相如、揚雄、鄧艾、曹叡、馬鈞、孔覬
 - 狐臭：楚懷王
