--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -29,6 +29,7 @@ export_on_save:
 - 自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之、後燕王榮、鄭羆之子
 - 赴戰陣殉難：關靖、于詮、諸葛尚
 - 跳樓：揚雄、緑珠、姚佛念
+- 抱石投河：申屠狄、屈原
 - 食餅毒死：漢質帝、晉惠帝
 - 被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、顔延之、唐肅宗
 - 被人嚇死：馮跋
@@ -56,7 +57,7 @@ export_on_save:
 - 消渴(糖尿病)：司馬相如
 - 羸瘵(肺結核)：賀循
 - 陽痿：膠西王劉端、司馬保、宋明帝
-- 吮癰舐痔：鄧通、李班
+- 吮癰舐痔：鄧通、李班、魏孝文帝
 - 壁中藏書：孔鮒、伏生、陳寵曾祖陳咸
 - 壁中藏人：梁伯玉、趙歧、袁閎、伏皇后
 - 相面大師：呂公、劉邦、許負、唐舉、朱建平、管輅
@@ -69,8 +70,8 @@ export_on_save:
 - 長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強、羅結、燕鳳、羊玄保、高允
 - 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后
 - 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人、尹太后
-- 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉
-- 矬：周舉、張松、朱然、宋配、何尚之、顔延之、陸俟
+- 醜：孔子、楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉
+- 矬：舜、周公旦、孫叔敖、葉公、晏嬰、周舉、張松、朱然、宋配、何尚之、顔延之、陸俟
 - 慫：韓馥、尉建、范曄、劉義恭
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香
 - 被污早年失德：陳平、直不疑、第五倫
@@ -143,12 +144,17 @@ export_on_save:
 - 眼白大：褚淵
 - 白眉：劉曜
 - 紅眼：劉曜
-- 重瞳：項羽、呂光、沈約、魚俱羅、朱友孜、北漢劉崇、李煜、卓岩明、明玉珍、顧炎武
+- 重瞳：堯、舜、項羽、呂光、沈約、魚俱羅、朱友孜、北漢劉崇、李煜、卓岩明、明玉珍、顧炎武
 - 三乳：李淵
 - 大頭：苻雄
 - 頭鋭：古弼
+- 青面：皋陶
 - 豁牙：慕容垂
 - 兔唇: 魏詠之
+- 秃頭：孫叔敖
+- 滿臉鬍鬚：閎夭
+- 駝背：傅說
+- 無毛：伊尹
 - 巨人：阮翁仲、巨毋霸
 - 魔術師：黎軒善眩人、海西幻人
 - 萬人迷：黃憲、溫嶠
