--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -82,7 +82,7 @@ export_on_save:
 - 牧羊牧牛：楚義帝、卜式、路溫舒、劉盆子、鄧艾、游明根
 - 賣鞋：劉備、慕容永、劉裕
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進
-- 屠夫家皇后：何皇后、謝玖
+- 屠夫家皇后：何皇后、謝玖、陳妙登
 - 力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥
 - 刻苦讀書：蘇秦(刺股)、朱買臣(負薪)、兒寬、路溫舒、東漢孫敬(懸樑)、匡衡(鑿壁偷光)、車胤(囊螢)、晉朝孫康(映雪)、李密(掛角)
 - 神童：后稷、項橐、甘羅、孔融、曹沖、周不疑
