更新人物至卷134節3

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -104,6 +104,7 @@ export_on_save:
 - 飆車愛好者：劉賀、宇文化及
 - cosplay愛好者：濟東王劉彭離、漢靈帝
 - 皇帝愛做小買賣：漢靈帝、劉義符、蕭寶卷
+- 熱愛微行：劉昱
 - 止啼：張遼、劉胡
 - 女裝大佬：曹叡、何晏、王國寶
 - 娘砲：李固、曹植、何晏、崔浩、唐伯虎
