--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -73,6 +73,7 @@ export_on_save:
 - 醜：孔子、楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉
 - 矬：舜、周公旦、孫叔敖、葉公、晏嬰、周舉、張松、朱然、宋配、何尚之、顔延之、陸俟
 - 慫：韓馥、尉建、范曄、劉義恭
+- 大腹：蕭道成
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香
 - 被污早年失德：陳平、直不疑、第五倫
 - 名廚：伊尹、易牙、毛修之
@@ -184,7 +185,7 @@ export_on_save:
 - 恥做乾兒子：秦始皇+嫪毐、張綉+曹操、張遇+苻健
 - 鞭屍戳屍：齊懿公+邴原、伍子胥+楚平王、蘇不韋+李阜、姚萇+苻堅、魏道武帝+慕容詳、桓玄+劉牢之
 - 被打鷄血：石遵+冉閔(努力！事成，以爾為儲貳)、朱棣+朱高煦(勉之！世子多疾)
-- 農夫與蛇：苻堅+姚萇、滕恬之+翟遼、沒奕干+赫連勃勃、禿髪傉檀+乞伏熾磐、殷景仁+劉湛
+- 農夫與蛇：苻堅+姚萇、滕恬之+翟遼、沒奕干+赫連勃勃、禿髪傉檀+乞伏熾磐、殷景仁+劉湛、李訢+范標
 
 # 雜說
 
