更新人物至卷134節10

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -161,6 +161,8 @@ export_on_save:
 - 魔術師：黎軒善眩人、海西幻人
 - 萬人迷：黃憲、溫嶠
 - 死忠老外：金日磾、呼尤徽、段匹磾、楊盛、源賀
+- 豬隊友：劉秉
+- 我叫不緊張：劉秉
 - 友方中的前朝忠良∶孝平王皇后、司馬孚
 - 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥、譙小苟、王苟生、姚驢、封魔奴、高閭
 - 女王范兒：郭女王、袁女皇
