--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -74,7 +74,7 @@ export_on_save:
 - 矬：舜、周公旦、孫叔敖、葉公、晏嬰、周舉、張松、朱然、宋配、何尚之、顔延之、陸俟
 - 慫：韓馥、尉建、范曄、劉義恭
 - 大腹：蕭道成
-- 野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香
+- 野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香、北魏王叡
 - 被污早年失德：陳平、直不疑、第五倫
 - 名廚：伊尹、易牙、毛修之
 - 狗監：楊得意
