--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -71,7 +71,7 @@ export_on_save:
 - 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后
 - 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人、尹太后
 - 醜：孔子、楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉
-- 矬：舜、周公旦、孫叔敖、葉公、晏嬰、周舉、張松、朱然、宋配、何尚之、顔延之、陸俟
+- 矬：舜、周公旦、孫叔敖、葉公、晏嬰、周舉、張松、朱然、宋配、何尚之、顔延之、陸俟、王敬弘
 - 慫：韓馥、尉建、范曄、劉義恭
 - 大腹：蕭道成
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香、北魏王叡
@@ -111,7 +111,7 @@ export_on_save:
 - 娘砲：李固、曹植、何晏、崔浩、唐伯虎
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯爽(女生)、小野妹子
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
-- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌、宗越、劉子業
+- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆、赫連勃勃、公孫軌、宗越、劉子業、于洛侯
 - 娛樂至死：劉渾
 - 帝王宗室殺手：趙高、靳準、宗愛、劉休仁
 - 屠伯：嚴延年、苟晞
