--- a/2_世系圖表/2.3_世家大族/琅邪太原王氏世系圖表.md
+++ b/2_世系圖表/2.3_世家大族/琅邪太原王氏世系圖表.md
@@ -80,3 +80,21 @@ graph TB
 王離-->王威
 王威-->太原王氏
 ```
+
+## 王儉相關世系
+
+```mermaid
+graph TB
+
+王導--孫-->王珣
+
+王珣-->王弘
+王珣-->王曇首
+
+王弘-->王僧達
+
+王曇首-->王僧綽
+王曇首-->王僧虔
+
+王僧綽-->王儉
+```
