--- a/3_專項研究/3.2_通用/歷代反賊李弘列表.md
+++ b/3_專項研究/3.2_通用/歷代反賊李弘列表.md
@@ -14,3 +14,5 @@ export_on_save:
 李弘|後秦李弘|後秦|414被姚興禽|妖賊，連氐人造反
 李洪|仇池李洪|仇池|446被梁會殺|仇池反賊被北魏反賊殺死
 李弘芝|李弘芝|隋朝|617年被唐弼殺|被唐弼推為天子
+
+- 北魏李洪之，雖然並非反賊，但從李文通改名後，得以與魏孝文帝奶奶結爲異姓兄妹，從此成爲外戚。484年孝文帝改革被祭刀首殺
